dockerfile単独で立ち上がるように修正

--- a/app/public/chat.html
+++ b/app/public/chat.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>SocketIOチャット</title>
+    <title>挙手システム</title>
     <style>
         body {
             margin: 0px 0px 0px 24px;
